# xeus-javascript

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  environment-dev.yml  environment-wasm-build.yml  environment-wasm-host.yml  environment.yml  xeus-javascriptConfig.cmake.in
.github/workflows/: main.yml
build_wasm/: .jupyterlite.doit.db  CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt  xeus-javascriptConfig.cmake  xeus-javascriptConfigVersion.cmake  xjavascript.js
build_wasm/_output/: jupyter-lite.json
build_wasm/_output/extensions/@jupyterlite/xeus/: build_log.json  package.json
build_wasm/_output/extensions/@jupyterlite/xeus/static/: 213.a26168fa7f788db64d42.js  413.9f2c08308b5136c746c6.js  747.3be122dc87aabb7136b1.js  870.1260b274e8c70c25c3c4.js  lib_index_js.7944edb5ab5b6076ee84.js  lib_index_js.7944edb5ab5b6076ee84.js.map  lib_worker_js.cfac58e4ec51dadfb6ba.js  lib_worker_js.cfac58e4ec51dadfb6ba.js.map  remoteEntry.4e90ef7cda9370efc0f8.js  remoteEntry.4e90ef7cda9370efc0f8.js.map  remoteEntry.b760861840fc78684226.js  style.js  style_index_js.3af6f5b861583a8d7e7e.js  style_index_js.3af6f5b861583a8d7e7e.js.map  third-party-licenses.json  vendors-node_modules_comlink_dist_esm_comlink_mjs.98c5262ec4258c8ac0b1.js  vendors-node_modules_comlink_dist_esm_comlink_mjs.98c5262ec4258c8ac0b1.js.map
build_wasm/_output/xeus/: kernels.json
build_wasm/_output/xeus/kernels/xcpp/: kernel.json
build_wasm/_output/xeus/kernels/xjavascript/: kernel.json
build_wasm/_output/xeus/kernels/xlua/: kernel.json
build_wasm/_output/xeus/kernels/xnelson/: empack_env_meta.json  kernel.json
build_wasm/_output/xeus/kernels/xpython/: kernel.json
build_wasm/_output/xeus/kernels/xsqlite/: kernel.json
docs/: Doxyfile  environment.yml
docs/source/: conf.py  dev-build-options.rst  index.rst  usage.rst
include/xeus-javascript/: convert.hpp  convert_json.hpp  xeus_javascript_config.hpp  xinterpreter.hpp
notebooks/: xeus-javascript.ipynb
share/jupyter/kernels/xjavascript/: kernel.json.in
src/: main.cpp  main_emscripten_kernel.cpp  post.js  pre.js  xcomm.cpp  xcomm.hpp  xinterpreter.cpp
test/: test_xjavascript_kernel.py
